name:                detoniabot
version:             0.0.1.0
synopsis:            Simple IRC bot written in Haskell
description:         Please see README.md
homepage:            https://gitla.in/MrDetonia/detoniabot
license:             BSD3
license-file:        LICENSE
author:              MrDetonia
maintainer:          mrdetonia@27b-a.xyz
copyright:           2016 Zac Herd
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bot.Network, Bot.Message, Bot.Socket
  build-depends:       base >= 4.7 && < 5
                     , text
                     , text-format
                     , network
                     , aeson
                     , bytestring
  default-language:    Haskell2010

executable detoniabot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , detoniabot
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git@gitla.in:MrDetonia/detoniabot.git
