name:                vomitchan
version:             0.0.1.0
synopsis:            IRC bot written in Haskell
description:         Please see README.md
homepage:            https://gitla.in/MrDetonia/vomitchan
license:             BSD3
license-file:        LICENSE
author:              MrDetonia & nymphet
maintainer:          mrdetonia@27b-a.xyz, nymphet@protonmail.com
copyright:           2016 MrDetonia & nymphet
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bot.Network
                     , Bot.MessageType
                     , Bot.Message
                     , Bot.Socket
                     , Bot.Commands
                     , Bot.FileOps
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , bytestring
                     , directory
                     , monad-loops
                     , network
                     , text
                     , text-format
  default-language:    Haskell2010

executable vomitchan-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , vomitchan
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git@gitla.in:MrDetonia/vomitchan.git
