name:                vomitchan
version:             0.0.1.0
synopsis:            IRC bot written in Haskell
description:         Please see README.md
homepage:            https://gitla.in/nymphet/vomitchan
license:             BSD3
license-file:        LICENSE
author:              MrDetonia & nymphet
maintainer:          nymphet@protonmail.com
copyright:           2016 MrDetonia & nymphet
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bot.Network
                     , Bot.MessageType
                     , Bot.Message
                     , Bot.State
                     , Bot.StateType
                     , Bot.Socket
                     , Bot.Commands
                     , Bot.FileOps
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , bytestring
                     , directory >= 1.2.5
                     , hashtables
                     , lens
                     , monad-loops
                     , network
                     , random
                     , regex-tdfa
                     , stm
                     , text
                     , text-format
                     , turtle
  default-language:    Haskell2010

executable vomitchan-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hashtables
                     , lens
                     , stm
                     , text
                     , vomitchan
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git@gitla.in:nymphet/vomitchan.git
