name:                vomitchan
version:             0.0.1.0
synopsis:            IRC bot written in Haskell
description:         Please see README.md
homepage:            https://gitla.in/nymphet/vomitchan
license:             BSD3
license-file:        LICENSE
author:              MrDetonia & mariari
maintainer:          nymphet@protonmail.com
copyright:           2016 MrDetonia & mariari
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bot.Network
                     , Bot.MessageType
                     , Bot.Message
                     , Bot.State
                     , Bot.StateType
                     , Bot.Socket
                     , Bot.Commands
                     , Bot.FileOps
                     , Bot.Misc
  build-depends:       aeson
                     , base >= 4.9 && < 5
                     , bytestring
                     , connection
                     , directory >= 1.2.5
                     , lens
                     , monad-loops
                     , network
                     , random
                     , regex-tdfa
                     , stm
                     , text
                     , text-format
                     , turtle
                     , utf8-string
                     , vector
                     , containers
                     , stm-containers
  default-language:    Haskell2010

executable vomitchan-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , connection
                     , lens
                     , stm
                     , text
                     , utf8-string
                     , vector
                     , vomitchan
                     , stm-containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git@gitla.in:nymphet/vomitchan.git
